# RobotVisualize

./: .gitignore  README.md  a.txt  requirements.txt
Robot/: .clang-format  CMakeLists.txt  package.xml
Robot/src/: GatherData.cpp  GatherData.h  MainNode.cpp  TcpServer.cpp  TcpServer.h  Util.cpp  Util.h
Web/: TcpClient.py  db.sqlite  run.py  temp.txt
Web/app/: __init__.py  config.py  database.py  schema.sql
Web/app/core/: context.py  control.py
Web/app/net/: ip.py  tcp_client.py
Web/app/templates/: base.html  client_list.html  test.html
Web/app/util/: util.py
Web/app/views/: client_list.py
webviz/: app copy.py  app.py
webviz/app/manager/: ros_manager.py  singleton.py
webviz/app/ros/: msg.py  node.py  plot_elem.py
webviz/app/tool/: adbtool.py  netool.py  rostool.py
webviz/app/views/: databoard.py  showlist.py
webviz/static/: showlist.css  test.css
webviz/templates/: base.html  databoard.html  pylot_demo.html  showlist.html  test.html
